--- a/my_trainning_colab_v1.ipynb
+++ b/my_trainning_colab_v1.ipynb
@@ -100,30 +100,28 @@
         "#load training dataset\n",
         "import numpy as np\n",
         "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
-        "\n",
+        "from pathlib import Path\n",
         "\n",
         "nameList = os.listdir('data/label')\n",
         "trainSize = len(nameList)\n",
+        "\n",
         "imgs = np.ndarray((trainSize,512,512,1), dtype='float32')\n",
         "labels = np.ndarray((trainSize,512,512,1), dtype='float32')\n",
         "\n",
         "for i, name in enumerate(nameList):\n",
-        "  try:\n",
-        "    img = load_img('data/train/' + name, grayscale = True)\n",
-        "    label = load_img('data/label/' + name, grayscale = True)\n",
-        "    img = scale(img)\n",
-        "    label = scale(label)\n",
-        "  except Exception:\n",
-        "    continue\n",
+        "  stem = Path(name).stem\n",
+        "  img = load_img('data/train/' + stem + '.PNG', grayscale = True)\n",
+        "  label = load_img('data/label/' + name, grayscale = True)\n",
         "  img = img_to_array(img).astype('float32')\n",
         "  label = img_to_array(label).astype('float32')\n",
         "  img -= img.mean()\n",
         "  img /= img.std()\n",
+        "  img = scale_resize_image(img)\n",
+        "  label = scale_resize_image(label)\n",
         "  imgs[i] = img\n",
         "  labels[i] = label\n",
         "  if i % 100 == 0:\n",
         "    print('Done: {0}/{1} images'.format(i, len(imgs)))\n",
-        "\n",
         "\n",
         "\n",
         "labels /= 255\n",
