--- a/my_trainning_colab_v1.ipynb
+++ b/my_trainning_colab_v1.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "TrainingExample.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -25,14 +11,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "dZmmzJQnnWMQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
+        "id": "dZmmzJQnnWMQ",
         "outputId": "08d54f1b-84df-4a1f-bc8b-fa1e2d3247d9"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "['data', 'log.csv', 'model.hdf5']"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#cd to the script folder\n",
         "from google.colab import drive\n",
@@ -40,33 +46,15 @@
         "drive.mount('/content/drive', force_remount=True)\n",
         "os.chdir('/content/drive/MyDrive/483w_Capstone//Team B/code-proj1/data/3') #Need to change the address to where your script is\n",
         "os.listdir('.')"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['data', 'log.csv', 'model.hdf5']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
       "metadata": {
         "id": "hVqPK7ZcnfXb"
       },
+      "outputs": [],
       "source": [
         "import tensorflow.compat.v2 as tf\n",
         "import tensorflow_datasets as tfds\n",
@@ -94,19 +82,35 @@
         "  return image\n",
         " \n",
         "\n"
-      ],
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
       "metadata": {
-        "id": "m_MgGkGVqHgY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "m_MgGkGVqHgY",
         "outputId": "0b0a059b-20ff-4764-9f83-3e082563240f"
       },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras_preprocessing/image/utils.py:107: UserWarning: grayscale is deprecated. Please use color_mode = \"grayscale\"\n",
+            "  warnings.warn('grayscale is deprecated. Please use '\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Done: 0/98 images\n"
+          ]
+        }
+      ],
       "source": [
         "#load training dataset\n",
         "import numpy as np\n",
@@ -139,118 +143,22 @@
         "labels[labels > 0.5] = 1\n",
         "labels[labels <= 0.5] = 0\n",
         "labels = np.reshape(1-labels,[-1,262144,1])"
-      ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/keras_preprocessing/image/utils.py:107: UserWarning: grayscale is deprecated. Please use color_mode = \"grayscale\"\n",
-            "  warnings.warn('grayscale is deprecated. Please use '\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Done: 0/98 images\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "exYcPI9bsxM0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "exYcPI9bsxM0",
         "outputId": "4592546c-dd86-454e-d274-024fd694d4b9"
       },
-      "source": [
-        "#training\n",
-        "from keras.models import *\n",
-        "from keras.layers import *\n",
-        "from keras.optimizers import *\n",
-        "from keras.callbacks import ModelCheckpoint, LearningRateScheduler, CSVLogger\n",
-        "from keras import backend as keras\n",
-        "from keras.initializers import *\n",
-        "import tensorflow as tf\n",
-        "Adam = tf.keras.optimizers.Adam\n",
-        "\n",
-        "\n",
-        "\n",
-        "def get_unet():\n",
-        "\t\tinputs = Input((512,512,1))\n",
-        "\t\tconv1 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(inputs)\n",
-        "\t\tprint (\"conv1 shape:\",conv1.shape)\n",
-        "\t\tconv1 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv1)\n",
-        "\t\tprint (\"conv1 shape:\",conv1.shape)\n",
-        "\t\tpool1 = MaxPooling2D(pool_size=(2, 2))(conv1)\n",
-        "\t\tprint (\"pool1 shape:\",pool1.shape)\n",
-        "\n",
-        "\t\tconv2 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool1)\n",
-        "\t\tprint (\"conv2 shape:\",conv2.shape)\n",
-        "\t\tconv2 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv2)\n",
-        "\t\tprint (\"conv2 shape:\",conv2.shape)\n",
-        "\t\tpool2 = MaxPooling2D(pool_size=(2, 2))(conv2)\n",
-        "\t\tprint (\"pool2 shape:\",pool2.shape)\n",
-        "\n",
-        "\t\tconv3 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool2)\n",
-        "\t\tprint (\"conv3 shape:\",conv3.shape)\n",
-        "\t\tconv3 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv3)\n",
-        "\t\tprint (\"conv3 shape:\",conv3.shape)\n",
-        "\t\tpool3 = MaxPooling2D(pool_size=(2, 2))(conv3)\n",
-        "\t\tprint (\"pool3 shape:\",pool3.shape)\n",
-        "\n",
-        "\t\tconv4 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool3)\n",
-        "\t\tconv4 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv4)\n",
-        "\t\tdrop4 = Dropout(0.5)(conv4)\n",
-        "\t\tpool4 = MaxPooling2D(pool_size=(2, 2))(drop4)\n",
-        "\n",
-        "\t\tconv5 = Conv2D(1024, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool4)\n",
-        "\t\tconv5 = Conv2D(1024, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv5)\n",
-        "\t\tdrop5 = Dropout(0.5)(conv5)\n",
-        "\n",
-        "\t\tup6 = Conv2D(512, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(drop5))\n",
-        "\t\tmerge6 = concatenate([drop4,up6],axis=3)\n",
-        "\t\tconv6 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge6)\n",
-        "\t\tconv6 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv6)\n",
-        "\n",
-        "\t\tup7 = Conv2D(256, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv6))\n",
-        "\t\tmerge7 = concatenate([conv3,up7], axis = 3)\n",
-        "\t\tconv7 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge7)\n",
-        "\t\tconv7 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv7)\n",
-        "\n",
-        "\t\tup8 = Conv2D(128, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv7))\n",
-        "\t\tmerge8 = concatenate([conv2,up8], axis = 3)\n",
-        "\t\tconv8 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge8)\n",
-        "\t\tconv8 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv8)\n",
-        "\n",
-        "\t\tup9 = Conv2D(64, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv8))\n",
-        "\t\tmerge9 = concatenate([conv1,up9], axis = 3)\n",
-        "\t\tconv9 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge9)\n",
-        "\t\tconv9 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv9)\n",
-        "\t\tconv9 = Conv2D(2, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv9)\n",
-        "\t\tconv10 = Conv2D(1, 1, activation = 'sigmoid')(conv9)\n",
-        "\t\treshape = Reshape((262144,1))(conv10)\n",
-        "\t\tmodel = Model(inputs = inputs, outputs = reshape)\n",
-        "\t\tmodel.compile(optimizer = Adam(lr = 1e-4), loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
-        "\t\treturn model\n",
-        "\n",
-        "model = get_unet()\n",
-        "model_checkpoint = ModelCheckpoint('model.hdf5', monitor='loss',verbose=1, save_best_only=True)\n",
-        "csv_logger = CSVLogger('log.csv', append=False, separator=',')\n",
-        "model.summary()\n",
-        "model.fit(imgs, labels, batch_size=BATCH_SIZE, epochs=15, verbose=1,validation_split=0.2, shuffle=True, callbacks=[model_checkpoint,csv_logger])\n",
-        "print('Fitting model...')"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "conv1 shape: (None, 512, 512, 64)\n",
             "conv1 shape: (None, 512, 512, 64)\n",
@@ -264,16 +172,16 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/keras/optimizer_v2/adam.py:105: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
             "  super(Adam, self).__init__(name, **kwargs)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"model_1\"\n",
             "__________________________________________________________________________________________________\n",
@@ -401,18 +309,124 @@
             " 1/39 [..............................] - ETA: 1:10 - loss: 0.3231 - accuracy: 0.9122"
           ]
         }
+      ],
+      "source": [
+        "#training\n",
+        "from keras.models import *\n",
+        "from keras.layers import *\n",
+        "from keras.optimizers import *\n",
+        "from keras.callbacks import ModelCheckpoint, LearningRateScheduler, CSVLogger\n",
+        "from keras import backend as keras\n",
+        "from keras.initializers import *\n",
+        "import tensorflow as tf\n",
+        "Adam = tf.keras.optimizers.Adam\n",
+        "\n",
+        "\n",
+        "\n",
+        "def get_unet():\n",
+        "\t\tinputs = Input((512,512,1))\n",
+        "\t\tconv1 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(inputs)\n",
+        "\t\tprint (\"conv1 shape:\",conv1.shape)\n",
+        "\t\tconv1 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv1)\n",
+        "\t\tprint (\"conv1 shape:\",conv1.shape)\n",
+        "\t\tpool1 = MaxPooling2D(pool_size=(2, 2))(conv1)\n",
+        "\t\tprint (\"pool1 shape:\",pool1.shape)\n",
+        "\n",
+        "\t\tconv2 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool1)\n",
+        "\t\tprint (\"conv2 shape:\",conv2.shape)\n",
+        "\t\tconv2 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv2)\n",
+        "\t\tprint (\"conv2 shape:\",conv2.shape)\n",
+        "\t\tpool2 = MaxPooling2D(pool_size=(2, 2))(conv2)\n",
+        "\t\tprint (\"pool2 shape:\",pool2.shape)\n",
+        "\n",
+        "\t\tconv3 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool2)\n",
+        "\t\tprint (\"conv3 shape:\",conv3.shape)\n",
+        "\t\tconv3 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv3)\n",
+        "\t\tprint (\"conv3 shape:\",conv3.shape)\n",
+        "\t\tpool3 = MaxPooling2D(pool_size=(2, 2))(conv3)\n",
+        "\t\tprint (\"pool3 shape:\",pool3.shape)\n",
+        "\n",
+        "\t\tconv4 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool3)\n",
+        "\t\tconv4 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv4)\n",
+        "\t\tdrop4 = Dropout(0.5)(conv4)\n",
+        "\t\tpool4 = MaxPooling2D(pool_size=(2, 2))(drop4)\n",
+        "\n",
+        "\t\tconv5 = Conv2D(1024, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool4)\n",
+        "\t\tconv5 = Conv2D(1024, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv5)\n",
+        "\t\tdrop5 = Dropout(0.5)(conv5)\n",
+        "\n",
+        "\t\tup6 = Conv2D(512, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(drop5))\n",
+        "\t\tmerge6 = concatenate([drop4,up6],axis=3)\n",
+        "\t\tconv6 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge6)\n",
+        "\t\tconv6 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv6)\n",
+        "\n",
+        "\t\tup7 = Conv2D(256, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv6))\n",
+        "\t\tmerge7 = concatenate([conv3,up7], axis = 3)\n",
+        "\t\tconv7 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge7)\n",
+        "\t\tconv7 = Conv2D(256, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv7)\n",
+        "\n",
+        "\t\tup8 = Conv2D(128, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv7))\n",
+        "\t\tmerge8 = concatenate([conv2,up8], axis = 3)\n",
+        "\t\tconv8 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge8)\n",
+        "\t\tconv8 = Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv8)\n",
+        "\n",
+        "\t\tup9 = Conv2D(64, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv8))\n",
+        "\t\tmerge9 = concatenate([conv1,up9], axis = 3)\n",
+        "\t\tconv9 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge9)\n",
+        "\t\tconv9 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv9)\n",
+        "\t\tconv9 = Conv2D(2, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv9)\n",
+        "\t\tconv10 = Conv2D(1, 1, activation = 'sigmoid')(conv9)\n",
+        "\t\treshape = Reshape((262144,1))(conv10)\n",
+        "\t\tmodel = Model(inputs = inputs, outputs = reshape)\n",
+        "\t\tmodel.compile(optimizer = Adam(lr = 1e-4), loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
+        "\t\treturn model\n",
+        "\n",
+        "model = get_unet()\n",
+        "model_checkpoint = ModelCheckpoint('model.hdf5', monitor='loss',verbose=1, save_best_only=True)\n",
+        "csv_logger = CSVLogger('log.csv', append=False, separator=',')\n",
+        "model.summary()\n",
+        "model.fit(imgs, labels, batch_size=BATCH_SIZE, epochs=15, verbose=1,validation_split=0.2, shuffle=True, callbacks=[model_checkpoint,csv_logger])\n",
+        "print('Fitting model...')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ewvPAiHtwmzm",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
+        "id": "ewvPAiHtwmzm",
         "outputId": "5749f20e-18bb-44a1-f4a6-c88f4de3bff3"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/keras_preprocessing/image/utils.py:107: UserWarning: grayscale is deprecated. Please use color_mode = \"grayscale\"\n",
+            "  warnings.warn('grayscale is deprecated. Please use '\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Done: 100/100 images\n",
+            "Network Loaded\n",
+            "Predicting test data\n",
+            "100/100 [==============================] - 7s 66ms/step\n"
+          ]
+        }
+      ],
       "source": [
         "#prediction\n",
         "import numpy as np\n",
@@ -437,6 +451,7 @@
         "  img = img_to_array(img).astype('float32')\n",
         "  img -= img.mean()\n",
         "  img /= img.std()\n",
+        "  img = scale_resize_image(img)\n",
         "  tests[i] = img\n",
         "  if (i+1) % 100 == 0:\n",
         "    print('Done: {0}/{1} images'.format(i+1, testSize))\n",
@@ -448,35 +463,21 @@
         "for i in range(predictions.shape[0]):\n",
         "\t\timg = array_to_img(predictions[i])\n",
         "\t\timg.save(\"data/prediction/{:d}\".format(i)+'.tif')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Loading\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/keras_preprocessing/image/utils.py:107: UserWarning: grayscale is deprecated. Please use color_mode = \"grayscale\"\n",
-            "  warnings.warn('grayscale is deprecated. Please use '\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Done: 100/100 images\n",
-            "Network Loaded\n",
-            "Predicting test data\n",
-            "100/100 [==============================] - 7s 66ms/step\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "TrainingExample.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
